DApp interfaz - contrato base

--- a/app/frentes.html
+++ b/app/frentes.html
@@ -34,16 +34,12 @@
             <!-- <li class="active"><a id="dirCuenta">Conecta tu wallet</a></li> -->
             
             <!-- <li class="disabled"><a href="#">Link</a></li> -->
-            <li class="dropdown">
+            <!-- <li class="dropdown">
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">Más <b class="caret"></b></a>
               <ul role="menu" class="dropdown-menu">
                 <li class="dropdown-header">No Conectado</li>
-                <!-- <li class="divider"></li> -->
-                <!-- <li class="active"><a href="#">Iniciar sesión</a></li> -->
-                <!-- <li class="divider"></li> -->
-                <!-- <li class="active"><a href="#" class="disabled">Salir</a></li> -->
               </ul>
-            </li>
+            </li> -->
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
