--- a/app/s-voto.html
+++ b/app/s-voto.html
@@ -98,13 +98,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div id="bs-content-row-navbar-collapse-5" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <!-- <li class="disabled"><a href="#">Link</a></li> -->
             <li class="dropdown">
-              <a data-toggle="dropdown" class="dropdown-toggle" href="#">Más <b class="caret"></b></a>
-              <ul role="menu" class="dropdown-menu">
-                <li class="dropdown-header">No conectado</li>
-                <!-- <li class="divider"></li> -->
-              </ul>
+              <div class="">
+                <button class="enableEthereumButton btn btn-info"  id="eth-btn">Conectar Wallet</button>
+              </div>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -150,6 +147,8 @@
                   <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NU</span>
                   <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TPU</span>
                 </div>
+                <br>
+                <h4 align="center">La dirección de tu voto es <a href="#">0xb68f244...f6e182d489c</a></h4>
               </div><!-- panel body -->
             </div>
             
