--- a/app/votar.html
+++ b/app/votar.html
@@ -35,13 +35,9 @@
             
             <!-- <li class="disabled"><a href="#">Link</a></li> -->
             <li class="dropdown">
-              <a data-toggle="dropdown" class="dropdown-toggle" href="#">Más <b class="caret"></b></a>
-              <ul role="menu" class="dropdown-menu">
-                <li class="dropdown-header">No registrado</li>
-                <!-- <li class="divider"></li> -->
-                <!-- <li class="active"><a href="#">Iniciar sesión</a></li> -->
-                <!-- <li class="divider"></li> -->
-              </ul>
+              <div class="">
+                <button class="enableEthereumButton btn btn-info"  id="eth-btn">Conectar Wallet</button>
+              </div>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
