--- a/app/con_int.html
+++ b/app/con_int.html
@@ -34,15 +34,12 @@
             <!-- <li class="active"><a href="con_int.html">Contrato inteligente</a></li> -->
             
             <!-- <li class="disabled"><a href="#">Link</a></li> -->
-            <li class="dropdown">
+            <!-- <li class="dropdown">
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">Más <b class="caret"></b></a>
               <ul role="menu" class="dropdown-menu">
                 <li class="dropdown-header" id="conectado">No conectado</li>
-                <!-- <li class="divider"></li> -->
-                <li class="active"><a href="#">Iniciar sesión</a></li>
-                <!-- <li class="divider"></li> -->
               </ul>
-            </li>
+            </li> -->
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -59,7 +56,7 @@
                 <a href="frentes.html"><li class="list-group-item"><i class="glyphicon glyphicon-list-alt"></i>Frentes habilitados</li></a>
                 <a href="votar.html"><li class="list-group-item"><i class="glyphicon glyphicon-ok"></i>Votar</li></a>
                 <!-- <a href="ver_voto.html" class="disabled"><li class="list-group-item disabled"><i class="glyphicon glyphicon-eye-open"></i>Ver mi voto</li></a> -->
-                <a href="ver_voto.html"><li class="list-group-item"><i class="glyphicon glyphicon-eye-open"></i>Ver mi voto</li></a>
+                <a href="s-voto.html"><li class="list-group-item"><i class="glyphicon glyphicon-eye-open"></i>Ver mi voto</li></a>
                 <a href="con_int.html"><li class="list-group-item actual"><i class="glyphicon glyphicon-file"></i>Contrato Inteligente</li></a>
                 <a href="consultas.html" ><li class="list-group-item"><i class="glyphicon glyphicon-warning-sign"></i>Consultas</li></a>
                 <!-- <a href="login.html"><li class="list-group-item"><i class="glyphicon glyphicon-lock"></i>Salir</li></a> -->
