--- a/app/index.html
+++ b/app/index.html
@@ -31,13 +31,13 @@
           <div id="bs-content-row-navbar-collapse-5" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               
-              <li class="dropdown">
+              <!-- <li class="dropdown">
                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">Más <b class="caret"></b></a>
                 <ul role="menu" class="dropdown-menu">
                   <li class="dropdown-header">No conectado</li>
-                  <!-- <li class="divider"></li> -->
                 </ul>
-              </li>
+              </li> -->
+
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
