Añadido de README

--- a/app/consultas.html
+++ b/app/consultas.html
@@ -80,7 +80,7 @@
                         </a>
                         <a href="s-voto.html" >
                             <li class="list-group-item">
-                                <i class="glyphicon glyphicon-eye-open"></i>Ver mi voto</li>
+                                <i class="glyphicon glyphicon-eye-open"></i>Ver resultados</li>
                         </a>
                         <a href="con_int.html">
                             <li class="list-group-item">
