--- a/app/s-voto.html
+++ b/app/s-voto.html
@@ -118,7 +118,7 @@
                 <a href="index.html"><li class="list-group-item"><i class="glyphicon glyphicon-home"></i>Inicio</li></a>
                 <a href="frentes.html"><li class="list-group-item"><i class="glyphicon glyphicon-list-alt"></i>Frentes habilitados</li></a>
                 <a href="votar.html"><li class="list-group-item"><i class="glyphicon glyphicon-ok"></i>Votar</li></a>
-                <a href="s-voto.html" class=""><li class="list-group-item actual"><i class="glyphicon glyphicon-eye-open"></i>Ver mi voto</li></a>
+                <a href="s-voto.html" class=""><li class="list-group-item actual"><i class="glyphicon glyphicon-eye-open"></i>Ver resultados</li></a>
                 <a href="con_int.html"><li class="list-group-item"><i class="glyphicon glyphicon-file"></i>Contrato Inteligente</li></a>
                 <a href="consultas.html" ><li class="list-group-item"><i class="glyphicon glyphicon-warning-sign"></i>Consultas</li></a>
               </ul>
@@ -148,7 +148,7 @@
                   <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TPU</span>
                 </div>
                 <br>
-                <h4 align="center">La dirección de tu voto es <a href="#">0xb68f244...f6e182d489c</a></h4>
+                <h4 align="center">Escutinio al <spam id="porcentaje">70 %</spam></h4>
               </div><!-- panel body -->
             </div>
             
