--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
                 <a href="index.html"><li class="list-group-item actual"><i class="glyphicon glyphicon-home"></i>Inicio</li></a>
                 <a href="frentes.html"><li class="list-group-item"><i class="glyphicon glyphicon-list-alt"></i>Frentes habilitados</li></a>
                 <a href="votar.html"><li class="list-group-item"><i class="glyphicon glyphicon-ok"></i>Votar</li></a>
-                <a href="s-voto.html"><li class="list-group-item"><i class="glyphicon glyphicon-eye-open"></i>Ver mi voto</li></a>
+                <a href="s-voto.html"><li class="list-group-item"><i class="glyphicon glyphicon-eye-open"></i>Ver resultados</li></a>
                 <a href="con_int.html"><li class="list-group-item"><i class="glyphicon glyphicon-file"></i>Contrato Inteligente</li></a>
                 <a href="consultas.html" ><li class="list-group-item"><i class="glyphicon glyphicon-warning-sign"></i>Consultas</li></a>
               </ul>
